# gnucobol

./: .autofonce  .gitignore  .gitlab-ci.yml  .gitpod.yml  .indent.pro  ABOUT-NLS  AUTHORS  CMakeLists.txt  ChangeLog  DEPENDENCIES  DEPENDENCIES.md  HACKING  Makefile.am  NEWS  NOTES  README  README.md  THANKS  TODO  autogen.sh  cobc-dev.7  configure.ac  gnucobol.spec  gnucobolcpp.spec  libcob.h  tech-plan.md
.github/workflows/: build_nightly.yml  ibm.yml  macos-bdb.yml  macos-java.yml  macos-visam.yml  macos.yml  ubuntu-bdb.yml  ubuntu-java.yml  ubuntu-visam.yml  ubuntu.yml  windows-java.yml  windows-msvc-bdb.yml  windows-msvc.yml  windows-msys1-bdb.yml  windows-msys1.yml  windows-msys2-bdb.yml  windows-msys2.yml  windows.yml  workflow.yml
.local/include/: libcob.h
.local/lib/: libcob.so.4  libcob.so.4.2.0
build_aux/: ChangeLog  ar-lib  bootstrap  create_mingw_bindist.sh  create_win_dist.sh  ltmain.sh  missing  pre-inst-env.in
build_aux/cmake/: cl-error.awk  config.cmake.h  cpp-indent.awk  cpp.cmd  inline.c
build_windows/: ChangeLog.txt  README  README.txt  config.h.bdb.win  config.h.in  config.h.vb.win  gcvsvars.cmd  makebisonflex.bat  makebisonflex.cmd  makedist.cmd  maketarstamp.ps1  set_env_vs.bat  set_env_vs_dist.bat  set_env_vs_dist_x64.bat  set_env_vs_x64.bat  set_env_vs_x64.cmd  set_env_vs_x64.dist.tmpl.cmd  set_env_vs_x86.cmd  set_env_vs_x86.dist.tmpl.cmd  version_cobc.rc  version_cobcrun.rc  version_cobfile.rc  version_gcdiff.rc  version_libcob.rc
build_windows/ocide/: GnuCOBOL.cwa  cobc.exe.cpj  cobcrun.exe.cpj  libcob.dll.cpj  libsupport.l.cpj
build_windows/vs2005/: GnuCOBOL.sln  cobc.vcproj  cobcrun.vcproj  libcob.vcproj
build_windows/vs2008/: GnuCOBOL.sln  cobc.vcproj  cobcrun.vcproj  libcob.vcproj
build_windows/vs2010/: GnuCOBOL.sln  cobc.vcxproj  cobc.vcxproj.filters  cobcrun.vcxproj  cobcrun.vcxproj.filters  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj
build_windows/vs2012/: GnuCOBOL.sln  cobc.vcxproj  cobc.vcxproj.filters  cobcrun.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj
build_windows/vs2013/: GnuCOBOL.sln  cobc.vcxproj  cobc.vcxproj.filters  cobcrun.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj
build_windows/vs2015/: GnuCOBOL.sln  cobc.vcxproj  cobc.vcxproj.filters  cobcrun.vcxproj  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj  libsupport.vcxproj.filters
build_windows/vs2017/: GnuCOBOL.sln  cobc.vcxproj  cobc.vcxproj.filters  cobcrun.vcxproj  cobcrun.vcxproj.filters  libcob.vcxproj  libcob.vcxproj.filters  libsupport.vcxproj
build_windows/vs2019/: GnuCOBOL.sln  cobc.vcxproj  cobcrun.vcxproj  (+4 more)
cobc/: ChangeLog  ChangeLog.branch  Makefile.am  cconv.c  cconv.h  cobc.c  cobc.cpp  cobc.h  codegen.c  codegen.cpp  codeoptim.c  codeoptim.cpp  codeoptim.def  config.c  config.cpp  config.def  debug.c  debuggen.c  dump_ast.c  dump_ast_gen.c  dump_tree.c  dump_tree_gen.c  error.c  error.cpp  field.c  field.cpp  flag.def  gentable.c  help.c  json.c  naming.cpp  parser.tab.c  parser.tab.h  parser.y  pplex.l  ppparse.def  ppparse.y  replace.c  replace.h  reserved.c  (+16 more)
config/: ChangeLog  Makefile.am  acu-strict.conf  acu.words  alternate.ttbl  bs2000-strict.conf  bs2000.words  cobol2002.conf  cobol2002.words  cobol2014.conf  cobol2014.words  cobol85.conf  cobol85.words  default.conf  default.keymap  default.ttbl  ebcdic500_ascii7bit.ttbl  ebcdic500_ascii8bit.ttbl  ebcdic500_latin1.ttbl  gcos-strict.conf  gcos.conf  gcos.words  gcos2014.conf  gcos85.conf  ibm-strict.conf  ibm.words  keymap.map  lax.conf-inc  mf-strict.conf  mf.conf  mf.words  mvs-strict.conf  mvs.words  realia-strict.conf  realia.words  rm-strict.conf  rm.conf  rm.words  runtime.cfg  xopen.conf
copy/: ChangeLog  Makefile.am  gcwindow.cpy  screenio.cpy  sqlca.cpy  sqlda.cpy  xfhfcd.cpy  xfhfcd3.cpy
doc/: ChangeLog  Makefile.am  cbhelp.tex.gen  cbintr.tex.gen  cbrunt.tex.gen  cobcinfo.sh  fdl.texi  gnucobol.texi  os.db.gen
extras/: CBL_OC_DUMP.cob  Makefile.am  README
lib/: ChangeLog  Makefile.am  dummymac.cpp  gettext.h
libcob/: ChangeLog  Makefile.am  Object.c  Object.h  btmsadd.cpp  call.c  call.cpp  cconv.c  cobcapi.c  cobcapi.h  cobdecimal.cpp  cobdecimal.h  cobgetopt.c  cobgetopt.cpp  cobgetopt.h  cobinternal.h  coblocal.h  common.c  common.cpp  common.h  exception-io.def  exception.def  fbdb.c  fextfh.c  fileio.c  fileio.cpp  fileio.h  fisam.c  flmdb.c  focextfh.c  foci.c  fodbc.c  fsqlxfd.c  hash_table.c  hash_table.h  intrinsic.c  intrinsic.cpp  java.c  jni_md.h  jor.c  (+32 more)
m4/: ax_ac_define_resolved.m4  ax_check_define.m4  ax_code_coverage.m4  ax_jni_include_dir.m4  ax_prog_java.m4  libtool.m4
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de.po  es.po  fr.po  gnucobol.pot  it.po  ja.po  nl.po  pt.po  sr.po  sv.po  tr.po  update_linguas.sh
spatch/: cast.spatch  list_files_name.spatch
tests/: ChangeLog  Makefile  Makefile.am  atlocal.in  atlocal_valgrind  atlocal_win  autofonce.env.sh  gentests.ml  listings-sed.sh  nistrun.at  package.m4  run_prog_manual.sh.in  testsuite.at  testsuite_manual.at  valgrind.supp
tests/cobol85/: ChangeLog  DBNOIX.txt  EXEC85.cob  Makefile.am  Makefile.module.in  README  RW.txt  expand.pl  report.pl  summary.pl  summary.txt  summarynoix.txt
tests/nistrun.src/: run_DB.at  run_IC.at  run_IF.at  run_IX.at  run_NC.at  run_OB.at  run_RL.at  run_RW.at  run_SG.at  run_SM.at  run_SQ.at  run_ST.at
tests/testsuite.src/: backcomp.at  backcomp_strings.at  configuration.at  data_binary.at  data_display.at  data_packed.at  data_pointer.at  iso885915.cob  listings.at  numeric-display.cob  numeric-dump.cob  run_accept.at  run_extensions.at  run_file.at  run_functions.at  run_fundamental.at  run_initialize.at  run_java.at  run_manual_screen.at  run_misc.at  run_ml.at  run_refmod.at  run_reportwriter.at  run_returncode.at  run_subscripts.at  syn_control.at  syn_copy.at  syn_definition.at  syn_file.at  syn_functions.at  syn_literals.at  syn_misc.at  syn_move.at  syn_multiply.at  syn_occurs.at  syn_redefines.at  syn_refmod.at  syn_reportwriter.at  syn_screen.at  syn_set.at  (+9 more)
(+33 files in other folders)
