#
# Makefile gnucobolcpp
#
# Copyright (C) 2003-2012, 2014-2017 Free Software Foundation, Inc.
# Written by Keisuke Nishida, Roger While, Simon Sobisch, Sergey Kashyrin
#
# This file is part of GnuCOBOL.
#
# The GnuCOBOL C++ compiler is free software: you can redistribute it
# and/or modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# GnuCOBOL C++ is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GnuCOBOL C++.  If not, see <http://www.gnu.org/licenses/>.

include_HEADERS = libcob.h

SUBDIRS = libcob lib cobc bin config copy po doc extras tests

ACLOCAL_AMFLAGS = -I m4 --install
BUILT_SOURCES = defaults.h libcob.h
DISTCLEANFILES = $(BUILT_SOURCES)
# CLEANFILES = $(bin_SCRIPTS)

EXTRA_DIST = gnucobolcpp.spec libcob.h.in \
	lib/Makefile.am lib/ChangeLog lib/dummymac.cpp lib/gettext.h
pkgincludedir = $(includedir)
pkginclude_HEADERS = libcob.h

# Add rules for code-coverage testing, as provided by AX_CODE_COVERAGE
@CODE_COVERAGE_RULES@
CODE_COVERAGE_BRANCH_COVERAGE = 1
CODE_COVERAGE_IGNORE_PATTERN = '/usr/include/*' '/usr/local/include/*'

dist-hook:
	echo "#define COB_TAR_DATE \"`date -u +'%b %d %Y %T'` UTC\"" > $(distdir)/tarstamp.h
	echo "#define COB_NUM_TAR_DATE `date -u +'%Y%m%d'`" >> $(distdir)/tarstamp.h
	echo "#define COB_NUM_TAR_TIME `date -u +'%H%M%S'`" >> $(distdir)/tarstamp.h
	find $(distdir) -type d -print | xargs chmod 777
	chmod 644 $(distdir)/bin/cob-config.in
	touch $(distdir)/m4/*.m4
	touch $(distdir)/aclocal.m4
	touch $(distdir)/Makefile.in
	touch $(distdir)/*/Makefile.in
	touch $(distdir)/*/*/Makefile.in
	touch $(distdir)/configure
	touch $(distdir)/config.h.in
	touch $(distdir)/doc/stamp-vti
	chmod 755 $(distdir)/build_aux/compile
	chmod 755 $(distdir)/build_aux/config.guess
	chmod 755 $(distdir)/build_aux/config.sub
	chmod 755 $(distdir)/build_aux/config.rpath
	chmod 755 $(distdir)/build_aux/depcomp
	chmod 755 $(distdir)/build_aux/install-sh
	chmod 755 $(distdir)/build_aux/ltmain.sh
	chmod 755 $(distdir)/build_aux/mdate-sh
	chmod 755 $(distdir)/build_aux/missing
	chmod 755 $(distdir)/build_aux/mkinstalldirs
	chmod 644 $(distdir)/ABOUT-NLS
	chmod 644 $(distdir)/AUTHORS
	chmod 644 $(distdir)/COPYING
	chmod 644 $(distdir)/COPYING.DOC
	chmod 644 $(distdir)/COPYING.LESSER
	chmod 644 $(distdir)/INSTALL
	chmod 644 $(distdir)/NEWS
	chmod 644 $(distdir)/README
	chmod 644 $(distdir)/THANKS
	chmod 644 $(distdir)/TODO
	chmod 644 $(distdir)/gnucobolcpp.spec
	chmod 755 $(distdir)/doc/cobcinfo.sh
	chmod 755 $(distdir)/tests/listings-sed.sh
	touch $(distdir)/cobc/ppparse.cpp
	touch $(distdir)/cobc/parser.cpp
	touch $(distdir)/cobc/pplex.cpp
	touch $(distdir)/cobc/scanner.cpp
	$(distdir)/doc/cobcinfo.sh "fixtimestamps"
	touch $(distdir)/bin/cobcrun.1
	touch $(distdir)/cobc/cobc.1

defaults.h: Makefile.am $(top_builddir)/config.status
	@echo "Creating defaults.h..."
	@{								\
	  echo "/* Automatically generated by Makefile */";		\
	  echo "#define COB_CC           \"$(COB_CC)\"";		\
	  echo "#define COB_CFLAGS       \"$(COB_CFLAGS)\"";		\
	  echo "#define COB_LDFLAGS      \"$(COB_LDFLAGS)\"";		\
	  echo "#define COB_LIBS         \"$(COB_LIBS)\"";		\
	  echo "#define COB_CONFIG_DIR   \"$(COB_CONFIG_DIR)\"";	\
	  echo "#define COB_COPY_DIR     \"$(COB_COPY_DIR)\"";		\
	  echo "#define COB_LIBRARY_PATH \"$(COB_LIBRARY_PATH)\"";	\
	  echo "#define COB_BLD_CC       \"$(CXX)\"";			\
	  echo "#define COB_BLD_CPPFLAGS \"$(CPPFLAGS)\"";		\
	  echo "#define COB_BLD_CFLAGS   \"$(CXXFLAGS)\"";		\
	  echo "#define COB_BLD_LD       \"$(LD)\"";			\
	  echo "#define COB_BLD_LDFLAGS  \"$(LDFLAGS)\"";		\
	  echo "#define COB_BLD_BUILD    \"$(build)\"";			\
	  echo "#define LOCALEDIR        \"$(datadir)/locale\"";	\
	} > defaults.h

test: all test-only

test-only:
	cd tests && $(MAKE) $(AM_MAKEFLAGS) test

checkall: check test-only
